# ART

./: .gitignore  CMakeLists.txt  LICENSE.md  configure.cmake  readme.md
src/: CMakeLists.txt  main.cpp
src/inc/: art.hpp  camera.hpp  elements.hpp  hittable.hpp  materials.hpp  ray.hpp  shapes.hpp  utility.hpp  vec3.hpp
